--- a/.travis.yml
+++ b/.travis.yml
@@ -51,4 +51,4 @@ matrix:
         - set VULKAN_SDK "C:\VulkanSDK\1.2.154.1"
         - libs/premake5/windows/premake5.exe vs2017 
         - export PATH=$MSBUILD_PATH:$PATH 
-        - MSBuild.exe TRAP.sln //t:Build
+        - MSBuild.exe ModernFileDialogs.sln //t:Build
