--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ matrix:
           packages:
           - g++-9
           - gcc-9
+          - g++-9-multilib
+          - gcc-9-multilib
           - cmake
       install: if [[ "$COMPILER" == "g++-9" ]]; then export CXX="g++-9" CC="gcc-9"; fi
       script:
