--- a/.travis.yml
+++ b/.travis.yml
@@ -30,4 +30,4 @@ matrix:
       script:
         - libs/premake5/windows/premake5.exe vs2017 
         - export PATH=$MSBUILD_PATH:$PATH 
-        - MSBuild.exe ModernFileDialogs.sln //t:Build
+        - MSBuild.exe ModernDialogs.sln //t:Build
