--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+    - name: Make gcc-10 and g++-10 default
+      run: |
+        sudo update-alternatives \
+          --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 \
+        sudo update-alternatives \
+          --install /usr/bin/g++ g++ /usr/bin/g++-10 100
     - name: Set Execute flags
       run: chmod +x GeneratorScripts/GenerateProjectMake.sh && chmod +x libs/premake5/linux/premake5
     - name: Generate Make files
@@ -26,4 +32,4 @@ jobs:
     - name: Generate Project files
       run: cd GeneratorScripts && .\GenerateProjectVS2022.bat && cd ..
     - name: Compile code
-      run: C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat && msbuild /m ModernDialogs.sln
+      run: 'C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat && msbuild /m ModernDialogs.sln'
