--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,11 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Make gcc-10 and g++-10 default
-      run: |
-        sudo update-alternatives \
-          --install /usr/bin/gcc gcc /usr/bin/gcc-10 100 \
-        sudo update-alternatives \
-          --install /usr/bin/g++ g++ /usr/bin/g++-10 100
+      env:
+        CC: gcc-10
+        CXX: g++-10
     - name: Set Execute flags
       run: chmod +x GeneratorScripts/GenerateProjectMake.sh && chmod +x libs/premake5/linux/premake5
     - name: Generate Make files
@@ -32,4 +30,4 @@ jobs:
     - name: Generate Project files
       run: cd GeneratorScripts && .\GenerateProjectVS2022.bat && cd ..
     - name: Compile code
-      run: 'C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat && msbuild /m ModernDialogs.sln'
+      run: '\"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat\" && msbuild /m ModernDialogs.sln'
