--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,30 +7,57 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-linux:
-    name: Build Linux Source
+  build-linux-gcc14-cpp17:
+    name: Build Linux Source C++17
     runs-on: ubuntu-latest
     env:
-      CC: gcc-10
-      CXX: g++-10
+      CC: gcc-14
+      CXX: g++-14
     steps:
     - uses: actions/checkout@v3
-    - name: Install g++-multilib
-      run: sudo apt-get install -y g++-10-multilib
+    - name: Install g++-14
+      run: sudo apt-get install -y g++-14
     - name: Set Execute flags
       run: chmod +x GeneratorScripts/GenerateProjectMake.sh && chmod +x libs/premake5/linux/premake5
     - name: Generate Make files
-      run: cd GeneratorScripts/ && ./GenerateProjectMake.sh && cd ..
+      run: cd GeneratorScripts/ && ./GenerateProjectMake.sh --std=C++17 && cd ..
     - name: Compile code
       run: make all
-  build-windows:
-    name: Build Windows Source
+  build-linux-gcc14-cpp20:
+    name: Build Linux Source C++20
+    runs-on: ubuntu-latest
+    env:
+      CC: gcc-14
+      CXX: g++-14
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install g++-14
+      run: sudo apt-get install -y g++-14
+    - name: Set Execute flags
+      run: chmod +x GeneratorScripts/GenerateProjectMake.sh && chmod +x libs/premake5/linux/premake5
+    - name: Generate Make files
+      run: cd GeneratorScripts/ && ./GenerateProjectMake.sh --std=C++17 && cd ..
+    - name: Compile code
+      run: make all
+  build-windows-cpp17:
+    name: Build Windows Source C++17
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
     - name: Add msbuild to PATH
       uses: microsoft/setup-msbuild@v1.1
     - name: Generate Project files
-      run: cd GeneratorScripts && .\GenerateProjectVS2022.bat && cd ..
+      run: cd GeneratorScripts && .\GenerateProjectVS2022.bat --std=C++17 && cd ..
+    - name: Compile code
+      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m ModernDialogs.sln'
+  build-windows-cpp20:
+    name: Build Windows Source C++20
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1
+    - name: Generate Project files
+      run: cd GeneratorScripts && .\GenerateProjectVS2022.bat --std=C++20 && cd ..
     - name: Compile code
       run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m ModernDialogs.sln'
