--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-linux-gcc14-cpp17:
-    name: Build Linux Source C++17
+  build-linux-x86_64-gcc14-cpp17:
+    name: Build Linux Source x86_64 C++17
     runs-on: ubuntu-latest
     env:
       CC: gcc-14
@@ -22,9 +22,9 @@ jobs:
     - name: Generate Make files
       run: cd GeneratorScripts/ && ./GenerateProjectMake.sh --std=C++17 && cd ..
     - name: Compile code
-      run: make all
-  build-linux-gcc14-cpp20:
-    name: Build Linux Source C++20
+      run: make config=release_x86_64 all
+  build-linux-x86_64-gcc14-cpp20:
+    name: Build Linux Source x86_64 C++20
     runs-on: ubuntu-latest
     env:
       CC: gcc-14
@@ -38,9 +38,41 @@ jobs:
     - name: Generate Make files
       run: cd GeneratorScripts/ && ./GenerateProjectMake.sh --std=C++17 && cd ..
     - name: Compile code
-      run: make all
-  build-windows-cpp17:
-    name: Build Windows Source C++17
+      run: make config=release_x86_64 all
+  build-linux-x86-gcc14-cpp17:
+    name: Build Linux Source x86 C++17
+    runs-on: ubuntu-latest
+    env:
+      CC: gcc-14
+      CXX: g++-14
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install g++-14
+      run: sudo apt-get install -y g++-14
+    - name: Set Execute flags
+      run: chmod +x GeneratorScripts/GenerateProjectMake.sh && chmod +x libs/premake5/linux/premake5
+    - name: Generate Make files
+      run: cd GeneratorScripts/ && ./GenerateProjectMake.sh --std=C++17 && cd ..
+    - name: Compile code
+      run: make config=release_x86 all
+  build-linux-x86-gcc14-cpp20:
+    name: Build Linux Source x86 C++20
+    runs-on: ubuntu-latest
+    env:
+      CC: gcc-14
+      CXX: g++-14
+    steps:
+    - uses: actions/checkout@v3
+    - name: Install g++-14
+      run: sudo apt-get install -y g++-14
+    - name: Set Execute flags
+      run: chmod +x GeneratorScripts/GenerateProjectMake.sh && chmod +x libs/premake5/linux/premake5
+    - name: Generate Make files
+      run: cd GeneratorScripts/ && ./GenerateProjectMake.sh --std=C++17 && cd ..
+    - name: Compile code
+      run: make config=release_x86 all
+  build-windows-x86_64-cpp17:
+    name: Build Windows Source x86_64 C++17
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
@@ -49,9 +81,9 @@ jobs:
     - name: Generate Project files
       run: cd GeneratorScripts && .\GenerateProjectVS2022.bat --std=C++17 && cd ..
     - name: Compile code
-      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m ModernDialogs.sln'
-  build-windows-cpp20:
-    name: Build Windows Source C++20
+      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m /p:Configuration=Release /p:Platform=x64 ModernDialogs.sln'
+  build-windows-x86_64-cpp20:
+    name: Build Windows Source x86_64 C++20
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v3
@@ -60,4 +92,27 @@ jobs:
     - name: Generate Project files
       run: cd GeneratorScripts && .\GenerateProjectVS2022.bat --std=C++20 && cd ..
     - name: Compile code
-      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m ModernDialogs.sln'
+      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m /p:Configuration=Release /p:Platform=x64 ModernDialogs.sln'
+  build-windows-x86-cpp17:
+    name: Build Windows Source x86 C++17
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1
+    - name: Generate Project files
+      run: cd GeneratorScripts && .\GenerateProjectVS2022.bat --std=C++17 && cd ..
+    - name: Compile code
+      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m /p:Configuration=Release /p:Platform=Win32 ModernDialogs.sln'
+  build-windows-x86-cpp20:
+    name: Build Windows Source x86 C++20
+    runs-on: windows-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1
+    - name: Generate Project files
+      run: cd GeneratorScripts && .\GenerateProjectVS2022.bat --std=C++20 && cd ..
+    - name: Compile code
+      run: '"C:\\Program Files\\Microsoft Visual Studio\\2022\\Enterprise\\Common7\\Tools\\VsDevCmd.bat" && msbuild /m /p:Configuration=Release /p:Platform=Win32 ModernDialogs.sln'
+
